--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body {
   height: 600px;
 }
 
+
+
 img {
   display: block;
 }
@@ -151,3 +153,7 @@ form {
   margin-top: 10px;
 }
 
+.darkTheme {
+  background: black;
+  color: white;
+}
